control-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: control-app-route
spec:
  path: /
  to:
    kind: Service
    name: control
  port:
    targetPort: 8080
